--- a/Microsoft.Rest/ClientRuntime/Properties/Resources.resx
+++ b/Microsoft.Rest/ClientRuntime/Properties/Resources.resx
@@ -141,6 +141,9 @@
   <data name="ExceptionRetryManagerNotSet" xml:space="preserve">
     <value>The default RetryManager has not been set. Set it by invoking the RetryManager.SetDefault static method, or if you are using declarative configuration, you can invoke the RetryPolicyFactory.CreateDefault() method to automatically create the retry manager from the configuration file.</value>
   </data>
+  <data name="ITransientErrorDetectionStrategyNotImplemented" xml:space="preserve">
+    <value>The error detection strategy type must implement the ITransientErrorDetectionStrategy interface.</value>
+  </data>
   <data name="ResponseStatusCodeError" xml:space="preserve">
     <value>Response status code indicates server error: {0} ({1}).</value>
   </data>
