--- a/ClientRuntimes/CSharp/ClientRuntime/Properties/Resources.resx
+++ b/ClientRuntimes/CSharp/ClientRuntime/Properties/Resources.resx
@@ -159,4 +159,43 @@
   <data name="TaskMustBeScheduled" xml:space="preserve">
     <value>The specified argument '{0}' must return a scheduled task (also known as "hot" task) when invoked.</value>
   </data>
+  <data name="ValidationCannotBeNull" xml:space="preserve">
+    <value>cannot be null</value>
+  </data>
+  <data name="ValidationEnum" xml:space="preserve">
+    <value>cannot have value other than</value>
+  </data>
+  <data name="ValidationExclusiveMaximum" xml:space="preserve">
+    <value>is equal or exceeds maximum value of</value>
+  </data>
+  <data name="ValidationExclusiveMinimum" xml:space="preserve">
+    <value>is less than or equal minimum value of</value>
+  </data>
+  <data name="ValidationMaximum" xml:space="preserve">
+    <value>exceeds maximum value of</value>
+  </data>
+  <data name="ValidationMaximumItems" xml:space="preserve">
+    <value>exceeds maximum item count of</value>
+  </data>
+  <data name="ValidationMaximumLength" xml:space="preserve">
+    <value>exceeds maximum length of</value>
+  </data>
+  <data name="ValidationMinimum" xml:space="preserve">
+    <value>is less than minimum value of</value>
+  </data>
+  <data name="ValidationMinimumItems" xml:space="preserve">
+    <value>contains less items than</value>
+  </data>
+  <data name="ValidationMinimumLength" xml:space="preserve">
+    <value>is less than minimum length of</value>
+  </data>
+  <data name="ValidationMultipleOf" xml:space="preserve">
+    <value>has to be multiple of</value>
+  </data>
+  <data name="ValidationPattern" xml:space="preserve">
+    <value>does not match expected pattern</value>
+  </data>
+  <data name="ValidationUniqueItems" xml:space="preserve">
+    <value>collection contains duplicate items</value>
+  </data>
 </root>
