--- a/ClientRuntimes/CSharp/ClientRuntime.Azure.Authentication/Properties/Resources.resx
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure.Authentication/Properties/Resources.resx
@@ -117,89 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ArgumentCannotBeEmpty" xml:space="preserve">
-    <value>Value cannot be empty.
-Parameter name: {0}</value>
+  <data name="AuthenticationEndpointContainsQuery" xml:space="preserve">
+    <value>The authentication endpoint must not contain a query string.</value>
   </data>
-  <data name="ArgumentCannotBeGreaterThanBaseline" xml:space="preserve">
-    <value>The specified argument {0} cannot be greater than its ceiling value of {1}.</value>
+  <data name="ErrorAcquiringToken" xml:space="preserve">
+    <value>Authentication error while acquiring token: '{0}'.</value>
   </data>
-  <data name="ArgumentCannotBeNegative" xml:space="preserve">
-    <value>The specified argument {0} cannot be initialized with a negative value.</value>
-  </data>
-  <data name="AuthenticationValidationFailed" xml:space="preserve">
-    <value>Authentication with Azure Active Directory Failed using clientId: {0}</value>
-  </data>
-  <data name="CertificateCloudCredentials_InitializeServiceClient_NoWebRequestHandler" xml:space="preserve">
-    <value>{0} requires a {1} in its HTTP pipeline to work with client certificates.</value>
-  </data>
-  <data name="ConfigurationHelper_CreateCouldNotConvertException" xml:space="preserve">
-    <value>Failed to convert parameter {0} value '{1}' to type {2}.</value>
-  </data>
-  <data name="ConfigurationHelper_CreateFromSettings_CreateSettingsFailedException" xml:space="preserve">
-    <value>{3}  Failed to create {0} from connection settings {1} = "{2}".</value>
-  </data>
-  <data name="ConfigurationHelper_CreateFromSettings_NoConnectionSettingsFound" xml:space="preserve">
-    <value>No connection settings found for type {0}.  Enable tracing for more information.</value>
-  </data>
-  <data name="ConfigurationHelper_GetCredentials_NotFound" xml:space="preserve">
-    <value>No credentials of type '{0}' could be initialized from the provided settings.</value>
-  </data>
-  <data name="ConfigurationHelper_GetParameter_NotFound" xml:space="preserve">
-    <value>Parameter {0} is required.</value>
-  </data>
-  <data name="CouldNotConvertToCertificateType" xml:space="preserve">
-    <value>Failed to convert parameter {0} value '{1}' to type {2}.</value>
-  </data>
-  <data name="DefaultRetryStrategyMappingNotFound" xml:space="preserve">
-    <value>Default retry strategy for technology {0}, named '{1}', is not defined.</value>
-  </data>
-  <data name="DefaultRetryStrategyNotFound" xml:space="preserve">
-    <value>Default retry strategy for technology {0} was not not defined, and there is no overall default strategy.</value>
-  </data>
-  <data name="ErrorCreatingAuthenticationContext" xml:space="preserve">
-    <value>Authentication error while configuring active directory: '{0}'.</value>
-  </data>
-  <data name="ExceptionRetryHandlerMissing" xml:space="preserve">
-    <value>Retry handler is not present in the HttpClient handler stack.</value>
-  </data>
-  <data name="ExceptionRetryManagerAlreadySet" xml:space="preserve">
-    <value>The RetryManager is already set.</value>
-  </data>
-  <data name="ExceptionRetryManagerNotSet" xml:space="preserve">
-    <value>The default RetryManager has not been set. Set it by invoking the RetryManager.SetDefault static method, or if you are using declarative configuration, you can invoke the RetryPolicyFactory.CreateDefault() method to automatically create the retry manager from the configuration file.</value>
-  </data>
-  <data name="LongRunningOperationFailed" xml:space="preserve">
-    <value>Long running operation failed with status '{0}'.</value>
-  </data>
-  <data name="NoBody" xml:space="preserve">
-    <value>The response from long running operation does not contain a body.</value>
-  </data>
-  <data name="NoHeader" xml:space="preserve">
-    <value>Location header is missing from long running operation.</value>
-  </data>
-  <data name="NoProvisioningState" xml:space="preserve">
-    <value>Provisioning state is missing from long running operation.</value>
-  </data>
-  <data name="ResponseStatusCodeError" xml:space="preserve">
-    <value>Response status code indicates server error: {0} ({1}).</value>
-  </data>
-  <data name="RetryLimitExceeded" xml:space="preserve">
-    <value>The action has exceeded its defined retry limit.</value>
-  </data>
-  <data name="RetryStrategyNotFound" xml:space="preserve">
-    <value>The retry strategy with name '{0}' cannot be found.</value>
-  </data>
-  <data name="StringCannotBeEmpty" xml:space="preserve">
-    <value>The specified string argument {0} must not be empty.</value>
-  </data>
-  <data name="TaskCannotBeNull" xml:space="preserve">
-    <value>The specified argument '{0}' cannot return a null task when invoked.</value>
-  </data>
-  <data name="TaskMustBeScheduled" xml:space="preserve">
-    <value>The specified argument '{0}' must return a scheduled task (also known as "hot" task) when invoked.</value>
-  </data>
-  <data name="UnexpectedPollingStatus" xml:space="preserve">
-    <value>Unexpected polling status code from long running operation '{0}'.</value>
+  <data name="ErrorRenewingToken" xml:space="preserve">
+    <value>Authentication error while renewing token: '{0}'.</value>
   </data>
 </root>
