--- a/AutoRest/Generators/NodeJS/Azure.NodeJS/Properties/Resources.resx
+++ b/AutoRest/Generators/NodeJS/Azure.NodeJS/Properties/Resources.resx
@@ -120,4 +120,7 @@
   <data name="InvalidLongRunningOperationForCreateOrUpdate" xml:space="preserve">
     <value>Long running operations for CreateOrUpdate require a GET operation under the same path and same operation group.</value>
   </data>
+  <data name="UsageInformation" xml:space="preserve">
+    <value>The {0} npm package is required to execute the generated code.</value>
+  </data>
 </root>
