--- a/AutoRest/Generators/NodeJS/NodeJS/Properties/Resources.resx
+++ b/AutoRest/Generators/NodeJS/NodeJS/Properties/Resources.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="UsageInstructions" xml:space="preserve">
-    <value>The ms-rest version 1.0.0 npm package is required to execute the generated code.</value>
+  <data name="UsageInformation" xml:space="preserve">
+    <value>The {0} npm package is required to execute the generated code.</value>
   </data>
 </root>
