--- a/AutoRest/Generators/Java/Azure.Java/Properties/Resources.resx
+++ b/AutoRest/Generators/Java/Azure.Java/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="InvalidLongRunningOperationForCreateOrUpdate" xml:space="preserve">
+    <value>Long running operations for '{0}' requires a GET operation under the same path and same operation group '{1}'.</value>
+  </data>
   <data name="UsageInformation" xml:space="preserve">
     <value>The {0} maven dependency is required to compile and run the generated code.</value>
   </data>
