--- a/AutoRest/AutoRest/Properties/Resources.resx
+++ b/AutoRest/AutoRest/Properties/Resources.resx
@@ -131,6 +131,6 @@
     <value>..\Resources\HelpMarkdownTemplate.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="HelpTextTemplate" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\HelpMarkdownTemplate.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+    <value>..\Resources\HelpTextTemplate.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
 </root>
