--- a/AutoRest/Generators/Azure.Common/Azure.Common/Properties/Resources.resx
+++ b/AutoRest/Generators/Azure.Common/Azure.Common/Properties/Resources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="HeadMethodInvalidResponses" xml:space="preserve">
-    <value>Head method '{0}' should contain only 204 and 404 responses.</value>
+    <value>Head method '{0}' should contain only 200 level responses, or 404.</value>
   </data>
   <data name="MissingProperties" xml:space="preserve">
     <value>Azure resource {0} is missing required 'properties' property.</value>
