--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -10,6 +10,7 @@
 * Added method parameter grouping via x-ms-parameter-grouping extension (#381)
 * Added support for decimal type (#83)
 * Changed generated C# code does not depend on JsonConvert (#372)
+* Changed generated C# code to make variables not clash with parameters (#309)
 * Changed service interface in C# to implement IDisposable (#278)
 * Bug fixes and to all code generators (#415, #419, #426, #447, #463, #491, #493, #497)
   
