--- a/AutoRest/Generators/Python/Python/Properties/Resources.resx
+++ b/AutoRest/Generators/Python/Python/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="InvalidIdentifierName" xml:space="preserve">
+    <value>Property name {0} cannot be used as an Identifier, as it contains only invalid characters.</value>
+  </data>
   <data name="UsageInformation" xml:space="preserve">
     <value>The {0} pip package is required to execute the generated code.</value>
   </data>
