Check that a default value is among the enumerated values, if the enumeration exists.

--- a/AutoRest/Modelers/Swagger/Properties/Resources.resx
+++ b/AutoRest/Modelers/Swagger/Properties/Resources.resx
@@ -366,4 +366,7 @@
   <data name="ZeroColonOne2" xml:space="preserve">
     <value>{0}: {1}</value>
   </data>
+  <data name="InvalidDefault" xml:space="preserve">
+    <value>The default value is not one of the values enumerated as valid for this element.</value>
+  </data>
 </root>
