--- a/AutoRest/Modelers/Swagger/Properties/Resources.resx
+++ b/AutoRest/Modelers/Swagger/Properties/Resources.resx
@@ -384,4 +384,7 @@
   <data name="AnonymousTypesDiscouraged" xml:space="preserve">
     <value>For better code quality, it's preferrable to define schemas in the definitions section, instead of inline.</value>
   </data>
+  <data name="OnlyOneUnderscoreAllowedInOperationId" xml:space="preserve">
+    <value>Only 1 underscore is permitted in the operation id.</value>
+  </data>
 </root>
