--- a/AutoRest/Modelers/Swagger/Properties/Resources.resx
+++ b/AutoRest/Modelers/Swagger/Properties/Resources.resx
@@ -375,4 +375,19 @@
   <data name="MissingDescription" xml:space="preserve">
     <value>Consider adding a 'description' element, essential for maintaining reference documentation.</value>
   </data>
+  <data name="ConflictingRef" xml:space="preserve">
+    <value>Members defined alongside $ref will be ignored according to JSON specification. allOf is the recommended way of modeling inheritance.</value>
+  </data>
+  <data name="InvalidTypeFormatCombination" xml:space="preserve">
+    <value>Type {0} and format {1} is not a supported combination</value>
+  </data>
+  <data name="AnonymousTypesDiscouraged" xml:space="preserve">
+    <value>For better code quality, it's preferable to define schemas in the definitions section, instead of inline.</value>
+  </data>
+  <data name="OnlyOneUnderscoreAllowedInOperationId" xml:space="preserve">
+    <value>Only 1 underscore is permitted in the operation id.</value>
+  </data>
+  <data name="InputRequired" xml:space="preserve">
+    <value>Input parameter is required.</value>
+  </data>
 </root>
