--- a/AutoRest/AutoRest.Core/Properties/Resources.resx
+++ b/AutoRest/AutoRest.Core/Properties/Resources.resx
@@ -249,4 +249,7 @@
   <data name="NoDefaultResponse" xml:space="preserve">
     <value>There is no default response defined in the responses section</value>
   </data>
+  <data name="XMSPathBaseNotInPaths" xml:space="preserve">
+    <value>The path '{0}' in x-ms-paths does not overload a normal path in the paths section.</value>
+  </data>
 </root>
